--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Environment variables
+.env.local
+.env.production
+.env*.local
+
+# Keep env example file
+!.env.example
+
+# Hiding idea
+.idea
