--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.94.2",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
