--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     ]
   },
   "dependencies": {
+    "@netlify/functions": "^5.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.4.1",
