--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@netlify/functions": "^5.1.1",
+    "@next/third-parties": "^16.0.10",
     "gsap": "^3.13.0",
     "lucide-react": "^0.556.0",
     "next": "^16.0.10",
